--- a/btf-site/templates/javascript.html
+++ b/btf-site/templates/javascript.html
@@ -64,7 +64,11 @@ $(document).ready(function (e) {
        generate_report('msgbox');
    });
     
-});
+/* event to change bootswatch theme (from bootstrap_flask) */
+   $('#other_theme').on('click', function() {
+       other_theme();
+   });
 
+});
 
 </script>
