--- a/btf-site/templates/base.html
+++ b/btf-site/templates/base.html
@@ -1,4 +1,5 @@
-<!doctype html>
+{% from 'bootstrap/utils.html' import render_icon %}
+<!DOCTYPE html>
 <html lang="en">
     <head>
         {% block head %}
@@ -38,8 +39,15 @@
         
         <div id="footer">
             {% block footer %}
-            <div class="fixed-bottom bg-dark text-white text-bold" style="font-size: 0.7rem">
-            &copy; Copyright 2021 by <a href="http://twitter.com/dudacgf" class="text-white bg-dark">dudacgf</a>.
+            <div class="fixed-bottom bg-dark text-light text-bold" style="font-size: 0.7rem">
+			<div class="row">
+			    <div class="col-11 float-left m-0 p-0 pl-3 b-0">
+                    &copy; Copyright 2021 by <a href="http://twitter.com/dudacgf" class="text-light bg-dark">dudacgf</a>.
+				</div>
+				<div id="other_theme" class="col-1 mr-auto m-0 b-0 text-right" data-toggle="tooltip" data-placement="top" title="change theme and reload page">
+				    {{ render_icon('arrow-counterclockwise', '0.7rem', 'light') }}
+				</div>
+			</div>
             </div>
             {% endblock %}
         </div>
