--- a/btf-site/templates/index.html
+++ b/btf-site/templates/index.html
@@ -1,4 +1,3 @@
-{% from 'bootstrap/utils.html' import render_icon %}
 {% extends "base.html" %}
 {% block head %}
   {{ super() }}
@@ -14,4 +13,11 @@
 
 <!-- options (format, level, reporttype) -->
 {% include 'flags.html' %}
+
+<!-- filters (networks, regex, cves) -->
+{%include 'filters.html' %}
+
+<!-- input report selection area -->
+{% include 'xml_files.html' %}
+
 {% endblock %}
