--- a/btf-site/templates/xml_files.html
+++ b/btf-site/templates/xml_files.html
@@ -1,13 +1,40 @@
-			<div class="header">
-				<div class="navbox">
-					<span>XML Reports:</span>
-					<span class="spanright"> 
-						<input type="file" id="inputfiles" name="files[]" multiple accept=".xml"/>
-						<label for="inputfiles">
-							<img class="imgbutton" title="select xml reports" src={{ url_for('.static', filename='images/if_upload.png') }}/>
-						</label>
-						<input type="image" title="remove xml reports" src={{ url_for('.static', filename='images/if_remove.png') }} id="erase_inputfiles" name="erase_inputfiles" class="imgbutton" />
-					</span>
-				</div>
-				<div id="show_inputfiles" class="xml_reports_box"></div>
-			</div>
+{% from 'bootstrap/utils.html' import render_icon %}
+<div class="row">
+    <div class="col ml-2 mb-2 mt-2 mr-0 p2 pt-2 border border-secondary bg-secondary rounded-left text-light">
+        <div class="row">
+            <div class="col-11 m-0 font-weight-bold">
+                XML Reports
+            </div>
+            <div class="col-1 m-0 text-right">
+                <div style="display: none;">
+                    <input type="file" id="inputfiles" name="files[]" multiple accept=".xml"/>
+                </div>
+                <label for="inputfiles">
+                    <img class="icon-white" title="select xml reports" src={{ url_for('.static', filename='images/cloud-arrow-up-fill.svg') }}/>
+                </label>
+                <input type="image" class="icon-white" title="remove xml reports" src={{ url_for('.static', filename='images/x-circle-fill.svg') }} id="erase_inputfiles" name="erase_inputfiles" />
+            </div>
+        </div>
+        <div class="row">
+            <div id="show_inputfiles" class="col-12 mh-100 p-2 bg-white" style="max-height: 120px; overflow-y: auto; height: 120px; font-size: 0.7rem; "></div>
+        </div>
+    </div>
+    <div class="col-2 ml-4 mb-2 mt-2 mr-2 p2 pt-2 border border-secondary bg-secondary rounded-right text-light">
+        <div class="row">
+            <div id="generate" class="col-11 m-0  pb-2 font-weight-bold">
+                Convert {{ render_icon('lightning-fill', '0.7rem', 'white') }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 p-2 bg-white text-center disabled" style="max-height: 120px; height: 120px; font-size: 0.7rem; ">
+                <div class="generatebox"> 
+                    <input type="image" title="Generate Report" 
+                         src={{ url_for('.static', filename='images/format-xlsx.svg') }} 
+                         id="generate_report" name="generate_report" class="generateimgbutton" />
+                </div>
+            </div>
+       </div>
+    </div>  
+</div>
+<p />
+<p />
