--- a/btf-site/templates/boxed_results.html
+++ b/btf-site/templates/boxed_results.html
@@ -1,6 +1,6 @@
 {% from 'bootstrap/table.html' import render_table %}
 {% if show_table %}
-    {{ render_table(lines, table_classes='col-auto p-0 m-0 table table-sm table-responsive table-striped ', header_classes="thead-dark", titles=titles, primary_key=primary_key, responsive=True) }}
+    {{ render_table(lines, table_classes='col-sm-12 p-0 m-0 table table-sm table-responsive table-striped ', header_classes="col-sm-12 thead-dark col-12", titles=titles, primary_key=primary_key, responsive=True) }}
 {% else %}
 <div class="col">
 {%- for line in lines %}
