--- a/btf-site/templates/xml_files.html
+++ b/btf-site/templates/xml_files.html
@@ -1,32 +1,37 @@
 {% from 'bootstrap/utils.html' import render_icon %}
 <div class="row">
-    <div class="col ml-2 mb-2 mt-2 mr-0 p2 pt-2 border border-secondary bg-secondary rounded-left text-light">
+    <div class="col-4 ml-2 mb-2 mt-2 mr-0 p2 pt-2 border border-secondary bg-secondary rounded-left text-light">
         <div class="row">
-            <div class="col-11 m-0 font-weight-bold">
+            <div class="col pb-2 m-0 font-weight-bold">
                 XML Reports
             </div>
-            <div class="col-1 m-0 text-right">
-                <div style="display: none;">
-                    <input type="file" id="inputfiles" name="files[]" multiple accept=".xml"/>
-                </div>
-                <label for="inputfiles">
-                    <img class="icon-white" title="select xml reports" src={{ url_for('.static', filename='images/cloud-arrow-up-fill.svg') }}/>
-                </label>
+            <div class="col m-0 text-right">
                 <input type="image" class="icon-white" title="remove xml reports" src={{ url_for('.static', filename='images/x-circle-fill.svg') }} id="erase_inputfiles" name="erase_inputfiles" />
             </div>
         </div>
         <div class="row">
-            <div id="show_inputfiles" class="col-12 mh-100 p-2 bg-white" style="max-height: 120px; overflow-y: auto; height: 120px; font-size: 0.7rem; "></div>
+            <div id="load_inputfiles" class="col mh-100 p-2 bg-white mh-100 align-middle text-secondary"
+                 style="max-height: 120px; overflow-y: auto; height: 120px; font-size: 0.7rem;">
+                 <form id="inputfiles" class="dropzone dz-clickable">
+                     <div class="dz-default dz-message" data-dz-message="">
+                         <span>Drop up to 10 .xml files here to upload or <em>click to browse</em>.</span>
+                     </div>
+                 </form>
+            </div> <!-- show_uploaded_files(e, "/api/list_xml_reports", "inputfiles"); -->
+            <div id="show_inputfiles" class="col mr-auto mh-100 p-2 bg-white text-secondary"
+                 style="max-height: 120px; overflow-y: auto; height: 120px; font-size: 0.7rem; display: none;">
+                 no files uploaded
+            </div>
         </div>
     </div>
-    <div class="col-2 ml-4 mb-2 mt-2 mr-2 p2 pt-2 border border-secondary bg-secondary rounded-right text-light">
+    <div class="col-4 ml-auto ml-4 mb-2 mt-2 mr-2 p2 pt-2 border border-secondary bg-secondary rounded-right text-light">
         <div class="row">
             <div id="generate" class="col-11 m-0  pb-2 font-weight-bold">
                 Convert {{ render_icon('lightning-fill', '0.7rem', 'white') }}
             </div>
         </div>
         <div class="row">
-            <div class="col-12 p-2 bg-white text-center disabled" style="max-height: 120px; height: 120px; font-size: 0.7rem; ">
+            <div class="col-12  bg-white text-center disabled" style="max-height: 120px; height: 120px; font-size: 0.7rem; ">
                 <div class="generatebox"> 
                     <input type="image" title="Generate Report" 
                          src={{ url_for('.static', filename='images/format-xlsx.svg') }} 
