Fix warning about using rem to calculate height

--- a/btf-site/templates/base.html
+++ b/btf-site/templates/base.html
@@ -56,7 +56,7 @@
                     &copy; Copyright 2021 by <a href="http://twitter.com/dudacgf" class="text-light bg-dark">dudacgf</a>.
 				</div>
 				<div id="other_theme" class="col-1 mr-auto m-0 b-0 text-right" data-toggle="tooltip" data-placement="top" title="change theme and reload page">
-				    {{ render_icon('arrow-counterclockwise', '0.7rem', 'light') }}
+				    {{ render_icon('arrow-counterclockwise', '1em', 'light') }}
 				</div>
 			</div>
             </div>
