--- a/btf-site/templates/navbar.html
+++ b/btf-site/templates/navbar.html
@@ -18,11 +18,11 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#" onclick='document.getElementById("load_configuration").click();'>
-                <div style="display: none;"><input type="file" id="load_configuration" multiple accept=".yml,.yaml"/></div>{{ render_icon('cloud-arrow-up-fill', '0.8rem') }}&nbsp;Upload
+                <div style="display: none;"><input type="file" id="load_configuration" multiple accept=".yml,.yaml"/></div>{{ render_icon('cloud-arrow-up-fill', '1em') }}&nbsp;Upload
               </a>
-              <a class="dropdown-item" href="/api/save_configuration">{{ render_icon('cloud-arrow-down-fill', '0.8rem') }}&nbsp;Save</a>
+              <a class="dropdown-item" href="/api/save_configuration">{{ render_icon('cloud-arrow-down-fill', '1em') }}&nbsp;Save</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="" id="clear_configuration">{{ render_icon('x-circle-fill', '0.8rem', 'red') }}&nbsp;Clear</a>
+              <a class="dropdown-item" href="" id="clear_configuration">{{ render_icon('x-circle-fill', '1em', 'red') }}&nbsp;Clear</a>
             </div>
           </li>
         </ul>
