--- a/btf-site/templates/xml_files.html
+++ b/btf-site/templates/xml_files.html
@@ -27,7 +27,7 @@
     <div class="col-4 ml-auto ml-4 mb-2 mt-2 mr-2 p2 pt-2 border border-secondary bg-secondary rounded-right text-light">
         <div class="row">
             <div id="generate" class="col-11 m-0  pb-2 font-weight-bold">
-                Convert {{ render_icon('lightning-fill', '0.7rem', 'white') }}
+                Convert {{ render_icon('lightning-fill', '1em', 'white') }}
             </div>
         </div>
         <div class="row">
