--- a/btf-site/templates/base.html
+++ b/btf-site/templates/base.html
@@ -33,6 +33,7 @@
    	    	    /* disable autodiscover globally */
    	    	    Dropzone.autoDiscover = false;
 
+                /* I'll need this later */
                 const WAITING_IMAGE_URL = '{{ url_for('.static', filename='images/i8_waiting.gif') }}'
                 const IMAGES_URL_BASE = '{{ url_for('.static', filename='images') }}';		
             </script>
@@ -44,7 +45,7 @@
     <body>
       <div class="container-fluid" ondragstart="return false;" ondrop="return false;">
         <!-- early load images -->
-        <div style="display:none;"><img src="{{ url_for('.static', filename='images/waiting.gif') }}"></div>
+        <div style="display:none;"><img src="{{ url_for('.static', filename='images/i8_waiting.gif') }}"></div>
         <!-- Your page content -->
         {% block content %}        {% endblock %}
         
