--- a/btf-site/templates/filters.html
+++ b/btf-site/templates/filters.html
@@ -30,7 +30,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div id="load_{{ filter_id }}_{{ action }}" class="col-md mh-100 p-2 bg-white mh-100 text-secondary align-middle"
+                                <div id="load_{{ filter_id }}_{{ action }}" class="col mh-100 p-2 bg-white mh-100 text-secondary align-middle"
                                      style="max-height: 180px; overflow-y: auto; height: 180px; font-size: 0.7rem; overflow-x: hidden;">
                                     <table style="height: 100%;">
                                       <tbody><tr><td class="align-middle">
@@ -42,7 +42,7 @@
                                       </td></tr></tbody>
                                     </table>
                                 </div>
-                                <div id="show_{{ filter_id }}_{{ action }}" class="col-md d-md-box mh-100 p-2 bg-white border-2 border-success" 
+                                <div id="show_{{ filter_id }}_{{ action }}" class="col mr-auto mh-100 p-2 bg-white border-2 border-success" 
                                      style="max-height: 180px; overflow-y: auto; height: 180px; font-size: 0.7rem; overflow-x: hidden; display: none;">
                                     upload files here
                                 </div>
