--- a/btf-site/templates/xml_files.html
+++ b/btf-site/templates/xml_files.html
@@ -17,7 +17,7 @@
                          <span>Drop up to 10 .xml files here to upload or <em>click to browse</em>.</span>
                      </div>
                  </form>
-            </div> <!-- show_uploaded_files(e, "/api/list_xml_reports", "inputfiles"); -->
+            </div> 
             <div id="show_inputfiles" class="col mr-auto mh-100 p-2 bg-white text-secondary"
                  style="max-height: 120px; overflow-y: auto; height: 120px; font-size: 0.7rem; display: none;">
                  no files uploaded
