--- a/ovrgen-site/static/css/styles.css
+++ b/ovrgen-site/static/css/styles.css
@@ -5,26 +5,33 @@
 opacity: 0;
 position: fixed;
 width: 0;
+margin: 0;
 }
 .flags-radio + label {
 display: inline-block;
-background-color: #66c430;
-color: white;
-padding: 5px;
+background-color: #cecece; 
+color: #444; 
+padding-left: 5px;
+padding-right: 5px;
 font-size: 12px;
-border: 1px solid #444;
-border-radius: 2px;
-margin: 2px;
+border-top: 0.5px solid #444;
+border-bottom: 0.5px solid #444;
+border-left: 0.5px solid #444;
+margin: 0;
 min-width: 60px;
 text-align: center;
 }
+.flags-radio + label:last-of-type {
+border-right: 0.5px solid #444;
+}
+
 .flags-radio:checked + label {
-background-color:#224110;
+background-color:#6e6e63;
 color: white;
 border-color: #444;
 }
 .flags-radio + label:hover {
-background-color:#224110;
+background-color:#6e6e6e;
 color: white;
 }
 
@@ -91,6 +98,3 @@ filter: invert(100%);
 position: relative;
 bottom: -0.2rem;
 }
-
-
-
