--- a/ovr-converter/templates/xml_files.html
+++ b/ovr-converter/templates/xml_files.html
@@ -1,6 +1,8 @@
 {% from 'bootstrap/utils.html' import render_icon %}
 <div class="row">
-    <div class="col-4 ml-2 mb-2 mt-2 mr-0 p2 pt-2 border border-secondary bg-secondary rounded-left text-light">
+    <div class="col">
+    <div class="row">
+    <div class="col ml-2 mb-2 mt-2 mr-0 p2 pt-2 border border-secondary bg-secondary rounded-left text-light">
         <div class="row">
             <div class="col pb-2 m-0 font-weight-bold">
                 XML Reports
@@ -24,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="col-4 ml-auto ml-4 mb-2 mt-2 mr-2 p2 pt-2 border border-secondary bg-secondary rounded-right text-light">
+    <div class="col-2 ml-auto ml-4 mb-2 mt-2 mr-2 p2 pt-2 border border-secondary bg-secondary rounded-right text-light">
         <div class="row">
             <div id="generate" class="col-11 m-0  pb-2 font-weight-bold">
                 Convert {{ render_icon('lightning-fill', '1em', 'white') }}
@@ -40,6 +42,6 @@
             </div>
        </div>
     </div>  
-</div>
+</div></div></div>
 <p />
 <p />
