--- a/ovr_convert/templates/col_table.html
+++ b/ovr_convert/templates/col_table.html
@@ -93,7 +93,7 @@
                    {%- if action_url is string %}
                     href="{{ action_url }}"
                    {%- else %}
-                    href="{{ build_url(action_url[0], model, row[primary_key], action_url[1]) | trim }}"
+                    href="{{ (action_url[0], '/', row[action_url[1]]) | join | trim }}"
                    {%- endif %}
                     title="{{ action_name }}">{{ render_icon(action_icon) }}</a>
             {%- endfor %}
