--- a/ovr_convert/templates/base.html
+++ b/ovr_convert/templates/base.html
@@ -63,6 +63,7 @@
             </div>
             {% endblock %}
         </div>
-      </div>  
+      </div>
+      <div id="show_message" class="content-message"></div>
     </body>
 </html>
